feat: backward compatibility of priority param
