# pkg/types/tx_scheduler.go
@@ -50,19 +50,19 @@ type ScheduleResponse struct {
 // go validator does not support mutually exclusive parameters for now
 // See more https://github.com/go-playground/validator/issues/608
 type TransactionParams struct {
-	Value           string               `json:"value,omitempty" validate:"omitempty,isBig" example:"71500000 (wei)"`
-	Gas             string               `json:"gas,omitempty" example:"21000"`
-	GasPrice        string               `json:"gasPrice,omitempty" validate:"omitempty,isBig" example:"71500000 (wei)"`
-	From            string               `json:"from" validate:"required_without=OneTimeKey,omitempty,eth_addr" example:"0x1abae27a0cbfb02945720425d3b80c7e09728534"`
-	To              string               `json:"to" validate:"required,eth_addr" example:"0x1abae27a0cbfb02945720425d3b80c7e09728534"`
-	MethodSignature string               `json:"methodSignature" validate:"required,isValidMethodSig" example:"transfer(address,uint256)"`
-	Args            []interface{}        `json:"args,omitempty"`
-	OneTimeKey      bool                 `json:"oneTimeKey,omitempty" example:"true"`
-	Priority        string               `json:"priority,omitempty" validate:"isPriority" example:"very-high" `
-	Protocol        string               `json:"protocol,omitempty" validate:"omitempty,isPrivateTxManagerType" example:"Tessera"`
-	PrivateFrom     string               `json:"privateFrom,omitempty" validate:"omitempty,base64" example:"A1aVtMxLCUHmBVHXoZzzBgPbW/wj5axDpW9X8l91SGo="`
-	PrivateFor      []string             `json:"privateFor,omitempty" validate:"omitempty,min=1,unique,dive,base64" example:"A1aVtMxLCUHmBVHXoZzzBgPbW/wj5axDpW9X8l91SGo=,B1aVtMxLCUHmBVHXoZzzBgPbW/wj5axDpW9X8l91SGo="`
-	PrivacyGroupID  string               `json:"privacyGroupId,omitempty" validate:"omitempty,base64" example:"A1aVtMxLCUHmBVHXoZzzBgPbW/wj5axDpW9X8l91SGo="`
+	Value           string         `json:"value,omitempty" validate:"omitempty,isBig" example:"71500000 (wei)"`
+	Gas             string         `json:"gas,omitempty" example:"21000"`
+	GasPrice        string         `json:"gasPrice,omitempty" validate:"omitempty,isBig" example:"71500000 (wei)"`
+	From            string         `json:"from" validate:"required_without=OneTimeKey,omitempty,eth_addr" example:"0x1abae27a0cbfb02945720425d3b80c7e09728534"`
+	To              string         `json:"to" validate:"required,eth_addr" example:"0x1abae27a0cbfb02945720425d3b80c7e09728534"`
+	MethodSignature string         `json:"methodSignature" validate:"required,isValidMethodSig" example:"transfer(address,uint256)"`
+	Args            []interface{}  `json:"args,omitempty"`
+	OneTimeKey      bool           `json:"oneTimeKey,omitempty" example:"true"`
+	GasPricePolicy  GasPriceParams `json:"gasPricePolicy,omitempty"`
+	Protocol        string         `json:"protocol,omitempty" validate:"omitempty,isPrivateTxManagerType" example:"Tessera"`
+	PrivateFrom     string         `json:"privateFrom,omitempty" validate:"omitempty,base64" example:"A1aVtMxLCUHmBVHXoZzzBgPbW/wj5axDpW9X8l91SGo="`
+	PrivateFor      []string       `json:"privateFor,omitempty" validate:"omitempty,min=1,unique,dive,base64" example:"A1aVtMxLCUHmBVHXoZzzBgPbW/wj5axDpW9X8l91SGo=,B1aVtMxLCUHmBVHXoZzzBgPbW/wj5axDpW9X8l91SGo="`
+	PrivacyGroupID  string         `json:"privacyGroupId,omitempty" validate:"omitempty,base64" example:"A1aVtMxLCUHmBVHXoZzzBgPbW/wj5axDpW9X8l91SGo="`
 }
 
 func (params *TransactionParams) Validate() error {
@@ -88,12 +88,12 @@ type SendTransactionRequest struct {
 }
 
 type TransferParams struct {
-	Value    string               `json:"value" validate:"required,isBig" example:"71500000 (wei)"`
-	Gas      string               `json:"gas,omitempty" example:"21000"`
-	GasPrice string               `json:"gasPrice,omitempty" validate:"omitempty,isBig" example:"71500000 (wei)"`
-	From     string               `json:"from" validate:"required,eth_addr" example:"0x1abae27a0cbfb02945720425d3b80c7e09728534"`
-	To       string               `json:"to" validate:"required,eth_addr" example:"0x1abae27a0cbfb02945720425d3b80c7e09728534"`
-	Priority string               `json:"priority,omitempty" validate:"isPriority" example:"very-high"`
+	Value          string         `json:"value" validate:"required,isBig" example:"71500000 (wei)"`
+	Gas            string         `json:"gas,omitempty" example:"21000"`
+	GasPrice       string         `json:"gasPrice,omitempty" validate:"omitempty,isBig" example:"71500000 (wei)"`
+	From           string         `json:"from" validate:"required,eth_addr" example:"0x1abae27a0cbfb02945720425d3b80c7e09728534"`
+	To             string         `json:"to" validate:"required,eth_addr" example:"0x1abae27a0cbfb02945720425d3b80c7e09728534"`
+	GasPricePolicy GasPriceParams `json:"gasPricePolicy,omitempty"`
 }
 
 func (params *TransferParams) Validate() error {
@@ -111,7 +111,7 @@ type TransferRequest struct {
 }
 
 type RawTransactionParams struct {
-	Raw   string               `json:"raw" validate:"required,isHex" example:"0xfe378324abcde723..."`
+	Raw string `json:"raw" validate:"required,isHex" example:"0xfe378324abcde723..."`
 }
 
 type RawTransactionRequest struct {
@@ -121,19 +121,19 @@ type RawTransactionRequest struct {
 }
 
 type DeployContractParams struct {
-	Value          string               `json:"value,omitempty" validate:"omitempty,isBig" example:"71500000 (wei)"`
-	Gas            string               `json:"gas,omitempty" example:"21000"`
-	GasPrice       string               `json:"gasPrice,omitempty" validate:"omitempty,isBig" example:"71500000 (wei)"`
-	From           string               `json:"from" validate:"required_without=OneTimeKey,omitempty,eth_addr" example:"0x1abae27a0cbfb02945720425d3b80c7e09728534"`
-	ContractName   string               `json:"contractName" validate:"required" example:"MyContract"`
-	ContractTag    string               `json:"contractTag,omitempty" example:"v1.1.0"`
-	Args           []interface{}        `json:"args,omitempty"`
-	OneTimeKey     bool                 `json:"oneTimeKey,omitempty" example:"true"`
-	Priority       string               `json:"priority,omitempty" validate:"isPriority" example:"very-high" `
-	Protocol       string               `json:"protocol,omitempty" validate:"omitempty,isPrivateTxManagerType" example:"Tessera"`
-	PrivateFrom    string               `json:"privateFrom,omitempty" validate:"omitempty,base64" example:"A1aVtMxLCUHmBVHXoZzzBgPbW/wj5axDpW9X8l91SGo="`
-	PrivateFor     []string             `json:"privateFor,omitempty" validate:"omitempty,min=1,unique,dive,base64" example:"A1aVtMxLCUHmBVHXoZzzBgPbW/wj5axDpW9X8l91SGo=,B1aVtMxLCUHmBVHXoZzzBgPbW/wj5axDpW9X8l91SGo="`
-	PrivacyGroupID string               `json:"privacyGroupId,omitempty" validate:"omitempty,base64" example:"A1aVtMxLCUHmBVHXoZzzBgPbW/wj5axDpW9X8l91SGo="`
+	Value          string         `json:"value,omitempty" validate:"omitempty,isBig" example:"71500000 (wei)"`
+	Gas            string         `json:"gas,omitempty" example:"21000"`
+	GasPrice       string         `json:"gasPrice,omitempty" validate:"omitempty,isBig" example:"71500000 (wei)"`
+	From           string         `json:"from" validate:"required_without=OneTimeKey,omitempty,eth_addr" example:"0x1abae27a0cbfb02945720425d3b80c7e09728534"`
+	ContractName   string         `json:"contractName" validate:"required" example:"MyContract"`
+	ContractTag    string         `json:"contractTag,omitempty" example:"v1.1.0"`
+	Args           []interface{}  `json:"args,omitempty"`
+	OneTimeKey     bool           `json:"oneTimeKey,omitempty" example:"true"`
+	GasPricePolicy GasPriceParams `json:"gasPricePolicy,omitempty"`
+	Protocol       string         `json:"protocol,omitempty" validate:"omitempty,isPrivateTxManagerType" example:"Tessera"`
+	PrivateFrom    string         `json:"privateFrom,omitempty" validate:"omitempty,base64" example:"A1aVtMxLCUHmBVHXoZzzBgPbW/wj5axDpW9X8l91SGo="`
+	PrivateFor     []string       `json:"privateFor,omitempty" validate:"omitempty,min=1,unique,dive,base64" example:"A1aVtMxLCUHmBVHXoZzzBgPbW/wj5axDpW9X8l91SGo=,B1aVtMxLCUHmBVHXoZzzBgPbW/wj5axDpW9X8l91SGo="`
+	PrivacyGroupID string         `json:"privacyGroupId,omitempty" validate:"omitempty,base64" example:"A1aVtMxLCUHmBVHXoZzzBgPbW/wj5axDpW9X8l91SGo="`
 }
 
 func (params *DeployContractParams) Validate() error {
